Update and rename s3-deployment-dev to s3-deployment-dev.yaml

--- a/.github/workflows/s3-deployment-dev.yaml
+++ b/.github/workflows/s3-deployment-dev.yaml
@@ -1,6 +1,9 @@
 name: S3 - ISSUANCE Deployment
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
 jobs:
   s3_deployment_dev:
     runs-on: ubuntu-latest
