--- a/.github/workflows/dev-piramal-s3-deployment.yaml
+++ b/.github/workflows/dev-piramal-s3-deployment.yaml
@@ -10,7 +10,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '20'
+          node-version: '16.14.2'
       
       - name: npm install, build
         run: |
@@ -20,8 +20,10 @@ jobs:
           fi
           echo '${{ secrets.DEV_ENV }}' > .env
           ls -ltra
-          npm install
+          npm install -g @angular/cli@^10.0.0
+          npm install --legacy-peer-deps
           npm run build
+          ng build --prod
           ls -ltra
       - name: Show PWD
         run: |
