Task #230654 -[FE] - Download certificate component UI and api integration

--- a/src/assets/config/config.json
+++ b/src/assets/config/config.json
@@ -1,7 +1,7 @@
 {
   "environment": "development",
   "keycloak": {
-    "url": "keycloak url",
+    "url": "https://dev-uba-registry.tekdinext.com/auth/",
     "clientId": "registry-frontend",
     "realm": "sunbird-rc"
   },
