Removed footer text

--- a/src/assets/config/config.json
+++ b/src/assets/config/config.json
@@ -10,7 +10,7 @@
   "title": "UBI VC Issuance",
   "rcBaseUrl": "/registry/api/v1",
   "schemaUrl": "/registry/api/docs/swagger.json",
-  "footerText": "Supported by Bill & Melinda Gates",
+  "footerText": "",
   "languages": ["en", "hi"],
   "appType": "attestation",
   "default_theme": {
